made icon smaller in fave and check buttons to avoid unintended addition of wrong park and a key error

--- a/static/styles.css
+++ b/static/styles.css
@@ -25,8 +25,8 @@ body {
 }
 
 .flash-msg {
-  background-color: #eda26a;
-  color: white;
+  background-color: white;
+  color: #eda26a;
   opacity: 0.8;
   border-radius: 20px;
   margin: 10px;
@@ -34,6 +34,7 @@ body {
   display: flex;
   justify-content: center;
   width: 25%;
+  font-weight: bold;
 }
 
 .nav {
@@ -283,6 +284,7 @@ div.parks-container {
 
 .fa-heart {
   color: #eda26a;
+  font-size: x-small;
 }
 
 .buttons-container {
@@ -328,4 +330,5 @@ div.parks-container {
 
 .fa-check {
   color: #eda26a;
+  font-size: x-small;
 }
